# flowmux

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  THIRD_PARTY_LICENSES.md  about.toml  install.sh
.agents/skills/flowmux-browser/: SKILL.md
.cargo/: config.toml
.claude/skills/flowmux-release/: SKILL.md
.github/workflows/: license-audit.yml  release.yml  test.yml  version-tag.yml
crates/flowmux/: Cargo.toml
crates/flowmux-app/: Cargo.toml
crates/flowmux-app/src/: agent_watch.rs  ipc_handler.rs  keybindings.rs  main.rs  theme.rs
crates/flowmux-app/src/bridge/: mod.rs
crates/flowmux-app/src/ui/: browser_pane.rs  mod.rs  options_dialog.rs  sidebar.rs  terminal_pane.rs  window.rs  workspace_view.rs
crates/flowmux-asr/: Cargo.toml
crates/flowmux-asr/src/: catalog.rs  config.rs  download.rs  lib.rs  session.rs  store.rs
crates/flowmux-asr/src/audio/: capture.rs  mod.rs  probe.rs  resample.rs
crates/flowmux-asr/src/engine/: mock.rs  mod.rs  whisper.rs
crates/flowmux-asr/tests/: voice_pipeline.rs
crates/flowmux-browser/: Cargo.toml
crates/flowmux-browser/src/: bookmarks.rs  controller.rs  lib.rs  profile.rs  refs.rs  scripts.rs  snapshot.rs
crates/flowmux-cli/: Cargo.toml
crates/flowmux-cli/src/: agent.rs  cmd_hooks.rs  cmd_ops.rs  desktop_install.rs  doctor.rs  hook_install.rs  hooks.rs  main.rs  main_tests.rs  output.rs  pty_tee.rs  request.rs
crates/flowmux-cli/tests/: pty_tee_integration.rs  tmux_compat_e2e.rs
crates/flowmux-config/: Cargo.toml
crates/flowmux-config/src/: asr.rs  cmux_json.rs  diagnostics.rs  ghostty.rs  keybindings.rs  lib.rs  options.rs  paths.rs  theme.rs
crates/flowmux-cookies/: Cargo.toml
crates/flowmux-cookies/src/: chromium.rs  cookie.rs  firefox.rs  lib.rs  source.rs
crates/flowmux-core/: Cargo.toml
crates/flowmux-core/src/: lib.rs  lib_tests.rs
crates/flowmux-daemon/: Cargo.toml
crates/flowmux-daemon/src/: handler.rs  lib.rs  main.rs  state_store.rs  tmux_compat.rs
crates/flowmux-daemon/tests/: stress_state_store_concurrent.rs
crates/flowmux-editor/: Cargo.toml
crates/flowmux-editor/src/: lib.rs  protocol.rs  recovery.rs  search.rs  session.rs  web_assets.rs
crates/flowmux-ipc/: Cargo.toml
crates/flowmux-ipc/src/: client.rs  lib.rs  protocol.rs  server.rs  tmux_compat.rs
crates/flowmux-ipc/tests/: stress_protocol_fuzz.rs
crates/flowmux-md-viewer/: Cargo.toml
crates/flowmux-md-viewer/src/: lib.rs  main.rs  render.rs
crates/flowmux-md-viewer/tests/: commonmark_spec.rs  gfm_spec.rs  render_cli.rs
crates/flowmux-notify/: Cargo.toml
crates/flowmux-notify/src/: lib.rs  osc.rs  sender.rs  stream.rs
crates/flowmux-notify/tests/: stress_osc_throughput.rs
crates/flowmux-procmon/: Cargo.toml
crates/flowmux-procmon/src/: lib.rs
crates/flowmux-ssh/: Cargo.toml
crates/flowmux-ssh/src/: lib.rs
crates/flowmux-state/: Cargo.toml
crates/flowmux-state/examples/: instance_lock_helper.rs
crates/flowmux-state/src/: agent_sessions.rs  instance_lock.rs  lib.rs
crates/flowmux-state/tests/: cross_process_lock.rs  multi_window_merge.rs
crates/flowmux-terminal/: Cargo.toml  build.rs
crates/flowmux-terminal/csrc/: ghostty_shim.c  ghostty_shim.h
crates/flowmux-terminal/src/: color.rs  engine.rs  key_modes.rs  lib.rs  pty.rs  render.rs  vt.rs  vte_backend.rs
crates/flowmux-vcs/: Cargo.toml
crates/flowmux-vcs/src/: lib.rs
crates/flowmux/examples/: ghostty_demo.rs
crates/flowmux/src/: asr.rs  builtin_icons.rs  ipc_handler.rs  ipc_handler_tests.rs  keybindings.rs  main.rs  notifications.rs  platform.rs  theme.rs
crates/flowmux/src/bridge/: mod.rs
crates/flowmux/src/ui/: agent_bar.rs  asr_panel.rs  browser_bookmarks.rs  browser_downloads.rs  browser_pane.rs  browser_pane_macos.rs  browser_pane_stub.rs  browser_pane_webkit.rs  editor_pane.rs  editor_pane_macos.rs  editor_pane_stub.rs  editor_pane_webkit.rs  file_browser.rs  ghostty_pane.rs  image_viewer.rs  keybindings_panel.rs  mod.rs  options_dialog.rs  overlay_menu.rs  pane_common.rs  pane_terminal.rs  show_in_folder.rs  sidebar.rs  terminal_pane.rs  terminal_pane_native.rs  terminal_render.rs  terminal_surface.rs  thorvg.rs  update_banner.rs  usage_popover.rs  window.rs  workspace_view.rs  worktree_panel.rs
crates/flowmux/src/ui/window/: agent_bar.rs  browser_commands.rs  command_palette.rs  file_browser.rs  mod.rs  notification_commands.rs  notification_coordinator.rs  pane_callbacks.rs  pane_commands.rs  polling.rs  surface_ops.rs  window_chrome_commands.rs  workspace_commands.rs  workspace_presenter.rs  worktrees.rs
crates/flowmux/src/update/: check.rs  install.rs  mod.rs
crates/flowmux/src/usage/: claude.rs  codex.rs  mod.rs
docs/: UPSTREAM.md  architecture-improvement-plan.md  architecture-improvement-results.md  configuration.md  flowmux-roadmap.md  ide-editor-plan.md  keybindings.md
docs/upstream-mapping/: README.md  config.md  domain-model.md  ipc.md  notifications.md  terminal.md
editor/flowmux-editor-web/: THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
editor/flowmux-editor-web/scripts/: build.mjs  verify-dist.mjs
editor/flowmux-editor-web/src/: editor_actions.ts  editor_state.ts  focus_navigation.ts  language.ts  main.ts  protocol.ts  styles.css  styles.d.ts
editor/flowmux-editor-web/src/workers/: css.worker.ts  editor.worker.ts  html.worker.ts  json.worker.ts  ts.worker.ts
editor/flowmux-editor-web/tests/: editor_actions.test.mjs  editor_shell.test.mjs  editor_state.test.mjs  focus_navigation.test.mjs  language.test.mjs  protocol.test.mjs
packaging/debian/: cargo-deb.toml
packaging/flatpak/: bootstrap-toolchain.sh  com.cmuxl.App.yml  com.flowmux.App.yml
resources/desktop/: com.flowmux.App.desktop
scripts/: build-editor-assets.sh  build-ghostty-vt.sh  check-ubuntu-compat.sh  deferred-macos-app-swap.sh  install-host.sh  install-macos.sh  install-thorvg.sh  sync-upstream.sh
