# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-asr"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Local speech-to-text engine: model catalog, downloader, mic capture, and Whisper inference for the push-to-talk voice input feature."

[features]
# Without `whisper-engine` the crate compiles against a Mock backend that
# returns a deterministic transcript. The GTK GUI crate turns the feature
# on so production builds link real whisper.cpp; the headless workspace
# `cargo check` path stays light.
default = []
whisper-engine = ["dep:whisper-rs"]

[dependencies]
flowmux-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
cpal = { workspace = true }
rubato = { workspace = true }
crossbeam-channel = { workspace = true }
futures-util = { workspace = true }
hound = { workspace = true }
whisper-rs = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
