[package]
name = "flowmux-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Config loaders for flowmux: cmux.json + ghostty config compatibility."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
