[package]
name = "flowmux-procmon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Process descendant + listening-port detection for flowmux workspaces."

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
