# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "flowmux-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Terminal PTY and compatibility helpers for flowmux."

[dependencies]
flowmux-core = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
